@@ -1,7 +1,7 @@
 /*
  * This file is part of Koremods, licensed under the MIT License
  *
- * Copyright (c) 2021 Garden of Fancy
+ * Copyright (c) 2021-2022 Garden of Fancy
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -30,19 +30,14 @@ import org.apache.logging.log4j.Logger;
 import wtf.gofancy.koremods.api.KoremodsLaunchPlugin;
 
 import java.io.File;
-import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.zip.ZipEntry;
@@ -50,7 +45,7 @@ import java.util.zip.ZipEntry;
 public class KoremodsPrelaunch {
     static final Logger LOGGER = LogManager.getLogger("Koremods.Prelaunch");
     private static final String LAUNCH_TARGET = "wtf.gofancy.koremods.launch.KoremodsLaunch";
-    private static final List<String> KOTLIN_DEP_PACKAGES = Arrays.asList(
+    public static final List<String> KOTLIN_DEP_PACKAGES = Arrays.asList(
             "org.jetbrains.",
             "kotlin.",
             "org.intellij.lang.",
@@ -61,93 +56,69 @@ public class KoremodsPrelaunch {
             "io.github.config4k.",
             "wtf.gofancy.koremods."
     );
-    
+
     private final Path gameDir;
-    private final URL[] discoveryUrls;
     private final Path modsDir;
     private final File cacheDir;
     private final Path depsPath;
-    public final URL modJarUrl;
-    private final JarFile modJar;
-    private final Attributes modJarAttributes;
-    
-    private DependencyClassLoader dependencyClassLoader;
+    public final URL mainJarUrl;
+    public final JarFile mainJar;
+    private final Attributes attributes;
+
+    private ClassLoader dependencyClassLoader;
     private KoremodsLaunchPlugin launchPlugin;
 
-    public KoremodsPrelaunch(Path gameDir, String mcVersion) throws Exception {
+    public KoremodsPrelaunch(Path gameDir, String mcVersion, URL mainJarUrl) throws Exception {
         this.gameDir = gameDir;
-        this.discoveryUrls = getModClasses();
         this.modsDir = gameDir.resolve("mods");
         Path koremodsDir = this.modsDir.resolve(mcVersion).resolve(KoremodsBlackboard.NAMESPACE);
         this.cacheDir = koremodsDir.resolve("cache").toFile();
         this.cacheDir.mkdirs();
         this.depsPath = koremodsDir.resolve("dependencies");
-        
-        this.modJarUrl = getClass().getProtectionDomain().getCodeSource().getLocation();
-        File modFile = new File(this.modJarUrl.toURI());
-        this.modJar = new JarFile(modFile);
-        this.modJarAttributes = this.modJar.getManifest().getMainAttributes();
+
+        this.mainJarUrl = mainJarUrl;
+        File file = new File(this.mainJarUrl.toURI());
+        this.mainJar = new JarFile(file);
+        this.attributes = this.mainJar.getManifest().getMainAttributes();
     }
-    
-    public void launch(String launchPluginClass) throws Exception {
+
+    public void launch(String launchPluginClass, URL[] discoveryUrls, ClassLoader classLoader) throws Exception {
         Path configDir = this.gameDir.resolve("config");
-        URL kotlinDep = extractDependency("Kotlin");
-        
-        dependencyClassLoader = new DependencyClassLoader(new URL[]{ this.modJarUrl, kotlinDep }, (URLClassLoader) getClass().getClassLoader(), KOTLIN_DEP_PACKAGES);
+
+        dependencyClassLoader = classLoader;
         Class<?> launchClass = dependencyClassLoader.loadClass(LAUNCH_TARGET);
         Method launchMethod = launchClass.getDeclaredMethod("launch", KoremodsPrelaunch.class, File.class, Path.class, Path.class, URL[].class, KoremodsLaunchPlugin.class);
-        Object instance = launchClass.newInstance();
-        
-        launchPlugin = launchPluginClass != null
-                ? (KoremodsLaunchPlugin) dependencyClassLoader.loadClass(launchPluginClass).newInstance()
-                : null;
-        
-        LOGGER.info("Launching Koremods instance");
-        launchMethod.invoke(instance, this, this.cacheDir, configDir, this.modsDir, this.discoveryUrls, launchPlugin);
-    }
-    
-    public URL extractDependency(String name) {
-        String depName = this.modJarAttributes.getValue("Additional-Dependencies-" + name);
-        if (depName == null) throw new IllegalArgumentException("Required dependency " + name + " not found");
+        Object instance = launchClass.getConstructor().newInstance();
 
-        ZipEntry entry = this.modJar.getEntry(depName);
+        launchPlugin = launchPluginClass != null
+                ? (KoremodsLaunchPlugin) dependencyClassLoader.loadClass(launchPluginClass).getConstructor().newInstance()
+                : null;
+
+        LOGGER.info("Launching Koremods instance");
+        launchMethod.invoke(instance, this, this.cacheDir, configDir, this.modsDir, discoveryUrls, launchPlugin);
+    }
+
+    public URL extractDependency(String name) {
+        String depName = this.attributes.getValue("Additional-Dependencies-" + name);
+        if (depName == null) throw new IllegalArgumentException("Required dependency " + name + " not found");
+        
         try {
-            Path destPath = this.depsPath.resolve(entry.getName());
+            Path destPath = this.depsPath.resolve(depName);
             if (Files.notExists(destPath)) {
                 Files.createDirectories(this.depsPath);
 
-                InputStream source = this.modJar.getInputStream(entry);
+                ZipEntry entry = this.mainJar.getEntry(depName);
+                InputStream source = this.mainJar.getInputStream(entry);
                 OutputStream dest = Files.newOutputStream(destPath);
                 IOUtils.copy(source, dest);
             }
             return destPath.toUri().toURL();
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new RuntimeException("Can't extract required dependency " + name, e);
         }
     }
 
-    private URL[] getModClasses() {
-        String modClasses = System.getenv("MOD_CLASSES");
-        return modClasses != null ? Arrays.stream(modClasses.split(File.pathSeparator))
-                .map(s -> {
-                    String[] parts = s.split("%%");
-                    return parts[parts.length - 1];
-                })
-                .map(Paths::get)
-                .map(path -> {
-                    try {
-                        return path.toUri().toURL();
-                    } catch (MalformedURLException e) {
-                        LOGGER.catching(e);
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .toArray(URL[]::new)
-                : new URL[0];
-    }
-
-    public DependencyClassLoader getDependencyClassLoader() {
+    public ClassLoader getDependencyClassLoader() {
         return this.dependencyClassLoader;
     }
 
